--- a/ProductCentralProject-Automation/test-output/old/Default suite/methods-not-run.html
+++ b/ProductCentralProject-Automation/test-output/old/Default suite/methods-not-run.html
@@ -1,26 +1,57 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_13</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_11</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_10</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_15</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_12</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_19</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_16</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_18</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_17</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_14_2</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_24</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_14_1</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_14_3</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_22</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_21</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_26</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_23</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_20</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_25</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_27</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_29</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_28</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_5_2</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_35</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_33</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_30</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_32</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_37</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_34</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_31</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_36</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_38</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_39</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB14</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_5</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_3</td></tr>
-<tr><td>com.pwc.productcentral.SanityTestCases.WEB_24</td></tr>
-<tr><td>com.pwc.productcentral.SanityTestCases.WEB_13</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_15_1</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_46</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_6</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_9</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_15_3</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_40</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_4</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_7</td></tr>
-<tr><td>com.pwc.productcentral.SanityTestCases.WEB_61</td></tr>
-<tr><td>com.pwc.productcentral.SanityTestCases.WEB_22</td></tr>
-<tr><td>com.pwc.productcentral.SanityTestCases.WEB_11</td></tr>
-<tr><td>com.pwc.productcentral.SanityTestCases.WEB_63</td></tr>
-<tr><td>com.pwc.productcentral.SanityTestCases.WEB_10</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_36_1</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_15_2</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_44</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_8</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_41</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_43</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_1</td></tr>
-<tr><td>com.pwc.productcentral.SanityTestCases.WEB_15</td></tr>
-<tr><td>com.pwc.productcentral.SanityTestCases.WEB_23</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_48</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_45</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_42</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_2</td></tr>
-<tr><td>com.pwc.productcentral.SanityTestCases.WEB_25</td></tr>
-<tr><td>com.pwc.productcentral.SanityTestCases.WEB_19</td></tr>
-<tr><td>com.pwc.productcentral.SanityTestCases.WEB_29</td></tr>
-<tr><td>com.pwc.productcentral.SanityTestCases.WEB_18</td></tr>
-<tr><td>com.pwc.productcentral.SanityTestCases.WEB_5_1</td></tr>
-<tr><td>com.pwc.productcentral.SanityTestCases.WEB_17</td></tr>
-<tr><td>com.pwc.productcentral.SanityTestCases.WEB_5_2</td></tr>
-<tr><td>com.pwc.productcentral.SanityTestCases.WEB_60</td></tr>
 </table>
