--- a/ProductCentralProject-Automation/test-output/emailable-report.html
+++ b/ProductCentralProject-Automation/test-output/emailable-report.html
@@ -31,28 +31,14 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">8</td><td class="numi">8</td><td class="numi">0</td><td class="numi">0</td><td class="numi">22.8 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">4.7 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">Default test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="8">com.pwc.productcentral.SanityTestCases</td><td><a href="#m1"><b>WEB_20</b>  </a></td><td class="numi">1</td><td>1668787289021</td><td class="numi">5127</td></tr><tr class="passedodd"><td><a href="#m2"><b>WEB_20_1</b>  </a></td><td class="numi">1</td><td>1668787294176</td><td class="numi">4218</td></tr><tr class="passedodd"><td><a href="#m3"><b>WEB_20_2</b>  </a></td><td class="numi">1</td><td>1668787298420</td><td class="numi">5478</td></tr><tr class="passedodd"><td><a href="#m4"><b>WEB_20_3</b>  </a></td><td class="numi">1</td><td>1668787303930</td><td class="numi">4179</td></tr><tr class="passedodd"><td><a href="#m5"><b>WEB_21</b>  </a></td><td class="numi">1</td><td>1668787308146</td><td class="numi">812</td></tr><tr class="passedodd"><td><a href="#m6"><b>WEB_21_1</b>  </a></td><td class="numi">1</td><td>1668787308986</td><td class="numi">783</td></tr><tr class="passedodd"><td><a href="#m7"><b>WEB_21_2</b>  </a></td><td class="numi">1</td><td>1668787309807</td><td class="numi">691</td></tr><tr class="passedodd"><td><a href="#m8"><b>WEB_21_3</b>  </a></td><td class="numi">1</td><td>1668787310550</td><td class="numi">1106</td></tr>
+<tr class="passedodd"><td rowspan="1">com.pwc.productcentral.SanityTestCases</td><td><a href="#m1"><b>WEB_47</b>  </a></td><td class="numi">1</td><td>1671032664092</td><td class="numi">4583</td></tr>
 </table>
 <h1>Default test</h1>
-<h2 id="m1">com.pwc.productcentral.SanityTestCases:WEB_20</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">com.pwc.productcentral.SanityTestCases:WEB_21_2</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">com.pwc.productcentral.SanityTestCases:WEB_20_3</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m4">com.pwc.productcentral.SanityTestCases:WEB_21_1</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m5">com.pwc.productcentral.SanityTestCases:WEB_20_2</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m6">com.pwc.productcentral.SanityTestCases:WEB_20_1</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m7">com.pwc.productcentral.SanityTestCases:WEB_21_3</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m8">com.pwc.productcentral.SanityTestCases:WEB_21</h2>
+<h2 id="m1">com.pwc.productcentral.SanityTestCases:WEB_47</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
