--- a/ProductCentralProject-Automation/Automation Report for QA.html
+++ b/ProductCentralProject-Automation/Automation Report for QA.html
@@ -44,7 +44,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Dec 14, 2022 10:44:23 AM</span>
+                    <span class='label suite-start-time blue darken-3'>Dec 15, 2022 11:02:23 AM</span>
 				</a>
 			</li>
 			<li>
@@ -155,14 +155,14 @@
 				
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>Verify the content pages will be tagged accordingly</span>
-						<span class='test-time'>Dec 14, 2022 10:44:25 AM</span>
+						<span class='test-name'>Verify that user entered keyword remains into search bar either user select suggested product name or not & submitted keyword doesn't match any result</span>
+						<span class='test-time'>Dec 15, 2022 11:02:24 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Dec 14, 2022 10:44:25 AM</span>
-	<span class='label end-time'>Dec 14, 2022 10:44:25 AM</span>
+	<span class='label start-time'>Dec 15, 2022 11:02:24 AM</span>
+	<span class='label end-time'>Dec 15, 2022 11:02:24 AM</span>
 	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+1ms</span>
 </div>
 	<div class='test-steps'>
@@ -177,8 +177,8 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>10:44:25 AM</td>
-					<td class='step-details'>Verified the content pages are tagged accordingly</td>
+					<td class='timestamp'>11:02:24 AM</td>
+					<td class='step-details'>Verified that user entered keyword remains into search bar either user select suggested product name or not & submitted keyword doesn't match any result</td>
 				</tr>
 			</tbody>
 		</table>
@@ -232,19 +232,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Dec 14, 2022 10:44:23 AM</div>
+					<div class='panel-lead'>Dec 15, 2022 11:02:23 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Dec 14, 2022 10:44:28 AM</div>
+			 		<div class='panel-lead'>Dec 15, 2022 11:02:24 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>4,806ms</div>
+					<div class='panel-lead'>1,485ms</div>
 				</div>
 			</div>
 		</div>
