--- a/ProductCentralProject-Automation/test-output/old/Default suite/methods-alphabetical.html
+++ b/ProductCentralProject-Automation/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e28667">  <td>22/12/14 10:44:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityTestCases.WEB_47()[pri:0, instance:com.pwc.productcentral.SanityTestCases@732bb66d]">WEB_47</td> 
+<tr bgcolor="6decaa">  <td>22/12/15 10:48:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityTestCases.WEB_30()[pri:0, instance:com.pwc.productcentral.SanityTestCases@219f4597]">WEB_30</td> 
   <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="e28667">  <td>22/12/14 10:44:28</td>   <td>4593</td> <td title="&lt;&lt;SanityTestCases.closingBrowser()[pri:0, instance:com.pwc.productcentral.SanityTestCases@732bb66d]">&lt;&lt;closingBrowser</td> 
+<tr bgcolor="6decaa">  <td>22/12/15 10:48:15</td>   <td>1695</td> <td title="&lt;&lt;SanityTestCases.closingBrowser()[pri:0, instance:com.pwc.productcentral.SanityTestCases@219f4597]">&lt;&lt;closingBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="e28667">  <td>22/12/14 10:44:23</td>   <td>-132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityTestCases.initTest()[pri:0, instance:com.pwc.productcentral.SanityTestCases@732bb66d]">&gt;&gt;initTest</td> 
+<tr bgcolor="6decaa">  <td>22/12/15 10:48:14</td>   <td>-123</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityTestCases.initTest()[pri:0, instance:com.pwc.productcentral.SanityTestCases@219f4597]">&gt;&gt;initTest</td> 
 <td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="e28667">  <td>22/12/14 10:44:23</td>   <td>-257</td> <td title="&gt;&gt;SanityTestCases.setUp()[pri:0, instance:com.pwc.productcentral.SanityTestCases@732bb66d]">&gt;&gt;setUp</td> 
+<tr bgcolor="6decaa">  <td>22/12/15 10:48:14</td>   <td>-237</td> <td title="&gt;&gt;SanityTestCases.setUp()[pri:0, instance:com.pwc.productcentral.SanityTestCases@219f4597]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
 </table>
