--- a/ProductCentralProject-Automation/Automation Report for QA.html
+++ b/ProductCentralProject-Automation/Automation Report for QA.html
@@ -44,7 +44,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Dec 15, 2022 09:02:39 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Dec 20, 2022 09:38:09 AM</span>
 				</a>
 			</li>
 			<li>
@@ -156,13 +156,13 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Verify clicking on the tile will navigate the user to the content page in the same tab</span>
-						<span class='test-time'>Dec 15, 2022 09:02:41 PM</span>
+						<span class='test-time'>Dec 20, 2022 09:38:14 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Dec 15, 2022 09:02:41 PM</span>
-	<span class='label end-time'>Dec 15, 2022 09:02:41 PM</span>
+	<span class='label start-time'>Dec 20, 2022 09:38:14 AM</span>
+	<span class='label end-time'>Dec 20, 2022 09:38:14 AM</span>
 	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+1ms</span>
 </div>
 	<div class='test-steps'>
@@ -177,7 +177,7 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>9:02:41 PM</td>
+					<td class='timestamp'>9:38:14 AM</td>
 					<td class='step-details'>Verified clicking on the tile navigates the user to the content page in the same tab</td>
 				</tr>
 			</tbody>
@@ -232,19 +232,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Dec 15, 2022 09:02:39 PM</div>
+					<div class='panel-lead'>Dec 20, 2022 09:38:09 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Dec 15, 2022 09:02:45 PM</div>
+			 		<div class='panel-lead'>Dec 20, 2022 09:38:17 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>6,158ms</div>
+					<div class='panel-lead'>8,114ms</div>
 				</div>
 			</div>
 		</div>
